--- a/plugins/main/src/main/res/values/strings.xml
+++ b/plugins/main/src/main/res/values/strings.xml
@@ -212,7 +212,7 @@
     <string name="graph_long_scale_18h">18 hours</string>
     <string name="graph_long_scale_24h">24 hours</string>
     <string name="a11y_graph">graph</string>
-    <string name="a11y_graph_scale">selet graph scale</string>
+    <string name="a11y_graph_scale">select graph scale</string>
     <string name="a11y_graph_scale_6h">graph scale 6 hours</string>
     <string name="a11y_graph_scale_12h">graph scale 12 hours</string>
     <string name="a11y_graph_scale_18h">graph scale 18 hours</string>
