New Crowdin updates (#3392)
* Update source file strings.xml

* New translations strings.xml (Italian)

* New translations strings.xml (French)

* New translations strings.xml (French)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Dutch)

* New translations strings.xml (Dutch)

* New translations strings.xml (Dutch)

* New translations strings.xml (Dutch)

* New translations strings.xml (Norwegian Bokmal)

* New translations strings.xml (Norwegian Bokmal)

* New translations strings.xml (Norwegian Bokmal)

* New translations strings.xml (French)

* New translations strings.xml (Norwegian Bokmal)

* Update source file strings.xml

* New translations strings.xml (Russian)

* New translations strings.xml (Italian)

* New translations strings.xml (Russian)

* New translations strings.xml (Italian)

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Spanish)

* New translations strings.xml (Norwegian Bokmal)

* Update source file strings.xml

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Italian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Russian)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Italian)

* New translations strings.xml (Spanish)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Hebrew)

* New translations strings.xml (French)

* New translations strings.xml (Czech)

* New translations strings.xml (Czech)

--- a/plugins/main/src/main/res/values-zh-rTW/strings.xml
+++ b/plugins/main/src/main/res/values-zh-rTW/strings.xml
@@ -191,7 +191,20 @@
     <string name="statuslights_bat_warning">幫浦電池等級警告閾值 [%]</string>
     <string name="statuslights_bat_critical">幫浦電池等級臨界閾值 [%]</string>
     <string name="statuslights_copy_ns">從NS複製設置</string>
+    <string name="graph_scale_6h">6小時</string>
+    <string name="graph_scale_12h">12小時</string>
+    <string name="graph_scale_18h">18小時</string>
+    <string name="graph_scale_24h">24小時</string>
+    <string name="graph_long_scale_6h">6小時</string>
+    <string name="graph_long_scale_12h">12小時</string>
+    <string name="graph_long_scale_18h">18小時</string>
+    <string name="graph_long_scale_24h">24小時</string>
     <string name="a11y_graph">圖表</string>
+    <string name="a11y_graph_scale">選擇圖表比例</string>
+    <string name="a11y_graph_scale_6h">圖表刻度 6 小時</string>
+    <string name="a11y_graph_scale_12h">圖表刻度12小時</string>
+    <string name="a11y_graph_scale_18h">圖表刻度18小時</string>
+    <string name="a11y_graph_scale_24h">圖表刻度 24 小時</string>
     <string name="a11y_insulin_label">胰島素</string>
     <string name="chart_menu">圖表選單</string>
     <string name="a11y_bg_quality">血糖質量</string>
