--- a/pump/medtrum/src/main/res/values-nl-rNL/strings.xml
+++ b/pump/medtrum/src/main/res/values-nl-rNL/strings.xml
@@ -89,6 +89,7 @@
     <string name="activating_pump">Pomp activeren en initiële basaalstand instellen. Even geduld alstublieft.</string>
     <string name="activating_error">Activeren mislukt, druk op <b>Opnieuw</b> om het nogmaals te proberen.</string>
     <string name="activating_complete">Nieuwe patch geactiveerd. %.2f Eenheden resterend.</string>
+    <string name="can_export_settings">Je kunt de instellingen exporteren om deze patch sessie later te kunnen herstellen.</string>
     <string name="press_OK_to_return">Druk op <b>OK</b> om terug te keren naar het hoofdscherm.</string>
     <string name="deactivate_sure">Weet u zeker dat u de huidige patch wilt deactiveren?</string>
     <string name="cancel_sure">Weet u zeker dat u de activatie wil annuleren?</string>
@@ -122,6 +123,7 @@
     <string name="daily_max_insulin_title">Maximale insuline per dag [Eenheden]</string>
     <string name="daily_max_insulin_summary">Geef de maximale hoeveelheid insuline per dag op. Indien overschreden zal de pomp de insuline toediening onderbreken.</string>
     <string name="scan_on_connection_error_title">Scan bij verbindingsfout</string>
+    <string name="scan_on_connection_error_summary">WAARSCHUWING: Alleen inschakelen als je verbindingsproblemen ondervindt. Indien ingeschakeld zoekt het stuurprogramma opnieuw naar de pomp voordat het opnieuw verbinding probeert te maken met de pomp. Zorg ervoor dat je Locatiemachtiging is ingesteld op \"Altijd toestaan\" </string>
     <!-- treatment state-->
     <string name="getting_pump_status">Pompstatus aan het ophalen</string>
     <string name="getting_bolus_status">Bolus status aan het ophalen</string>
