--- a/plugins/aps/src/main/res/values-ru-rRU/strings.xml
+++ b/plugins/aps/src/main/res/values-ru-rRU/strings.xml
@@ -192,4 +192,6 @@
     <string name="openapsama_autoISF_max_summary">Значение по умолчанию: 1.0 \n Это множитель предела autoISF, который, в свою очередь определяет, насколько низко он может опустить ISF.\n\nПРЕДУПРЕЖДЕНИЕ: Будьте предельно внимательны при использовании значений выше 2.5</string>
     <string name="openapsama_autoISF_min_summary">Значение по умолчанию: 1.0 \n Это множитель нижнего предела autoISF, который, в свою очередь, определяет, насколько высоко он может поднять ISF.</string>
     <string name="openapsama_dura_ISF_weight_summary" formatted="false">Значение по умолчанию: 0.0\n Ээто скорость, с которой autoISF увеличивается в час, при условии, что ГК в два раза выше целевой. При значении 1.0 величина ISF снизится до 50% после 1 часа работы с ГК, в два раза превышающим цель.\n\n При значении 0.0 эффект автоматической настройки ISF фактически отключен.</string>
+    <string name="openapsama_lower_ISFrange_weight_summary">Значение по умолчанию: 0.0\nЭто нагрузка, прилагаемая к многоугольнику адаптации ISF при ГК ниже цели. \n\nПри 0.0 нагрузка отключена.</string>
+    <string name="openapsama_higher_ISFrange_weight_summary">Значение по умолчанию: 0.0\nЭто нагрузка, прилагаемая к многоугольнику адаптации ISF если ГК выше цели. \n\nПри 0.0 нагрузка отключена.</string>
 </resources>
