--- a/plugins/main/src/main/res/values-zh-rTW/strings.xml
+++ b/plugins/main/src/main/res/values-zh-rTW/strings.xml
@@ -22,14 +22,14 @@
     <string name="smscommunicator_otp_step2_provisioning_header">2. 掃描代碼設置AAPS OTP代碼</string>
     <string name="smscommunicator_otp_step3_test_header">3. 測試一次性密碼</string>
     <string name="smscommunicator_otp_reset_header">重置驗證器</string>
-    <string name="smscommunicator_otp_install_info">在每個跟隨者的手機上安裝支援RFC 6238 TOTP令牌的驗證器應用。流行的免費應用有：\n • Authy\n • Google Authenticator\n • LastPass Authenticator\n • FreeOTP Authenticator</string>
+    <string name="smscommunicator_otp_install_info">在每個追蹤者的手機上安裝支援RFC 6238 TOTP令牌的驗證器應用。流行的免費應用有：\n • Authy\n • Google Authenticator\n • LastPass Authenticator\n • FreeOTP Authenticator</string>
     <string name="smscommunicator_otp_reset_warning">通過重置驗證器，您將使所有已設置的驗證器失效。您將需要重新設置它們！</string>
     <string name="smscommunicator_otp_verification_ok">OK</string>
     <string name="smscommunicator_otp_verification_ivalid_size">無效的大小！</string>
     <string name="smscommunicator_otp_verification_wrong_pin">錯誤的PIN碼</string>
     <string name="smscommunicator_otp_verification_wrong_otp">錯誤的OTP</string>
     <string name="sms_wrong_code">錯誤的代碼。命令已取消。</string>
-    <string name="sms_timeout_while_waiting">等待上次幫浦通信結束時逾時</string>
+    <string name="sms_timeout_while_waiting">等待上次幫浦通訊結束時逾時</string>
     <string name="smscommunicator_allowednumbers">允許的電話號碼</string>
     <string name="smscommunicator_allowednumbers_summary">+XXXXXXXXXX;+YYYYYYYYYY</string>
     <string name="smscommunicator_bolus_reply_with_code">要輸送 %1$.2fU 的注射請回覆代碼 %2$s</string>
@@ -54,13 +54,13 @@
     <string name="smscommunicator_loop_is_enabled">循環已啟用</string>
     <string name="smscommunicator_pump_connect_with_code">要連線幫浦請回覆代碼 %1$s</string>
     <string name="smscommunicator_pump_connect_fail">連線幫浦失敗</string>
-    <string name="smscommunicator_pump_disconnect_with_code">要斷開幫浦連線 %1$d 分鐘請回覆代碼 %2$s</string>
+    <string name="smscommunicator_pump_disconnect_with_code">要中斷幫浦連線 %1$d 分鐘請回覆代碼 %2$s</string>
     <string name="smscommunicator_pump_disconnected">幫浦已中斷連線</string>
     <string name="smscommunicator_reconnect">幫浦已重新連線</string>
     <string name="smscommunicator_remote_command_not_allowed">不允許遠端命令</string>
     <string name="smscommunicator_remote_bolus_not_allowed">遠端注射不可用。請稍後再試。</string>
     <string name="smscommunicator_basal_reply_with_code">要開始基礎速率 %1$.2f U/h 持續 %2$d 分鐘請回覆代碼 %3$s</string>
-    <string name="smscommunicator_profile_reply_with_code">要將個人設置切換為 %1$s %2$d%% 請回覆代碼 %3$s</string>
+    <string name="smscommunicator_profile_reply_with_code">要將設定檔切換為 %1$s %2$d%% 請回覆代碼 %3$s</string>
     <string name="smscommunicator_extended_reply_with_code">要開始延長注射 %1$.2f U 持續 %2$d 分鐘請回覆代碼 %3$s</string>
     <string name="smscommunicator_carbs_reply_with_code">要輸入 %1$dg 在 %2$s 請回覆代碼 %3$s</string>
     <string name="smscommunicator_basal_pct_reply_with_code">要開始基礎速率 %1$d%% 持續 %2$d 分鐘請回覆代碼 %3$s</string>
@@ -96,8 +96,8 @@
     <string name="smscommunicator_set_closed_loop_reply_with_code">要將循環模式切換為閉環請回覆代碼 %1$s</string>
     <string name="smscommunicator_current_loop_mode">當前循環模式：%1$s</string>
     <string name="wrong_format">錯誤的格式</string>
-    <string name="sms_actual_bg">BG：</string>
-    <string name="sms_last_bg">最後BG：</string>
+    <string name="sms_actual_bg">血糖：</string>
+    <string name="sms_last_bg">最後血糖：</string>
     <string name="sms_delta">增量：</string>
     <string name="sms_iob">IOB：</string>
     <string name="sms_bolus">注射：</string>
@@ -122,34 +122,34 @@
     <string name="subcategory">子類別</string>
     <string name="calculator_label">計算機</string>
     <!-- Theme switcher dark and light mode-->
-    <string name="theme_switcher_summary">選擇深色、淺色或跟隨系統主題</string>
+    <string name="theme_switcher_summary">選擇深色、淺色或追蹤系統主題</string>
     <string name="app_color_scheme">應用顏色方案</string>
     <string name="dark_theme">深色主題</string>
     <string name="light_theme">淺色主題</string>
     <string name="follow_system_theme">使用系統預設主題</string>
     <!-- Profile -->
-    <string name="localprofile">個人設置</string>
-    <string name="localprofile_shortname">LP</string>
+    <string name="localprofile">設定檔</string>
+    <string name="localprofile_shortname">設定</string>
     <string name="description_profile_local">定義一個可離線使用的配置。</string>
     <string name="a11y_add_new_to_list">添加新項到列表</string>
-    <string name="do_you_want_switch_profile">您是否要切換個人設置，並放棄對當前個人設置所做的更改？</string>
-    <string name="save_or_reset_changes_first">首先保存或重置當前更改</string>
-    <string name="delete_current_profile">刪除當前個人設置？</string>
+    <string name="do_you_want_switch_profile">您是否要切換設定檔，並放棄對當前設定檔所做的更改？</string>
+    <string name="save_or_reset_changes_first">首先儲存或重置當前更改</string>
+    <string name="delete_current_profile">刪除當前設定檔？</string>
     <string name="units_colon">單位：</string>
-    <string name="missing_profile_name">缺少個人設置名稱</string>
+    <string name="missing_profile_name">缺少設定檔名稱</string>
     <string name="error_in_ic_values">IC值錯誤</string>
     <string name="error_in_basal_values">基礎速率值錯誤</string>
     <string name="error_in_target_values">目標值錯誤</string>
     <string name="error_in_isf_values">ISF值錯誤</string>
-    <string name="profile_name_contains_dot">某些個人設置名稱包含點。\n這不被NS支援。\n個人設置將不會上傳到NS。</string>
-    <string name="invalid_profile_not_accepted">無效的個人設置 %1$s 不被NS接受</string>
+    <string name="profile_name_contains_dot">某些設定檔名稱包含點。\n這不被NS支援。\n設定檔將不會上傳到NS。</string>
+    <string name="invalid_profile_not_accepted">無效的設定檔 %1$s 不被NS接受</string>
     <string name="view">查看</string>
     <string name="errors">錯誤</string>
-    <string name="select_profile">選擇要編輯的個人設置</string>
-    <string name="profile_name">個人設置名稱：</string>
-    <string name="a11y_add_new_profile">添加新個人設置</string>
-    <string name="a11y_clone_profile">複製當前個人設置</string>
-    <string name="a11y_delete_current_profile">刪除當前個人設置</string>
+    <string name="select_profile">選擇要編輯的設定檔</string>
+    <string name="profile_name">設定檔名稱：</string>
+    <string name="a11y_add_new_profile">添加新設定檔</string>
+    <string name="a11y_clone_profile">複製當前設定檔</string>
+    <string name="a11y_delete_current_profile">刪除當前設定檔</string>
     <string name="dia_short">DIA</string>
     <string name="target_short">目標</string>
     <string name="basal_short">基礎速率</string>
@@ -226,11 +226,11 @@
     <string name="change_your_input">更改您的輸入！</string>
     <string name="openaps">OpenAPS</string>
     <string name="uploader">上傳設備</string>
-    <string name="data_status">BG資料狀態</string>
+    <string name="data_status">血糖資料狀態</string>
     <string name="quickwizard_settings">快速嚮導設置</string>
     <string name="keep_screen_on_title">保持螢幕開啟</string>
     <string name="keep_screen_on_summary">防止Android關閉螢幕。當未連線電源時，這將消耗大量能量。</string>
-    <string name="treatments">治療措施</string>
+    <string name="treatments">治療</string>
     <string name="carb_increment_button_message">按下按鈕時要添加的碳水化合物數量</string>
     <string name="insulin_increment_button_message">按下按鈕時要添加的胰島素量</string>
     <string name="firstinsulinincrement">第一次胰島素增量</string>
@@ -264,7 +264,7 @@
     <string name="enablesuperbolus">在嚮導中啟用超級注射</string>
     <string name="enablesuperbolus_summary">在嚮導中啟用超級注射功能。在暸解其實際功能之前不要啟用。盲目使用可能會導致胰島素過量！</string>
     <string name="enablebolusreminder">啟用注射提醒</string>
-    <string name="enablebolusreminder_summary">使用提醒，在提示後再進行注射（\"後注射\"）</string>
+    <string name="enablebolusreminder_summary">使用提醒，在提示後再進行注射（\"稍後再注射\"）</string>
     <string name="run_question">運行 %s？</string>
     <!--    OverviewMenu-->
     <string name="overview_show_predictions">預測</string>
