--- a/plugins/aps/src/main/res/values-zh-rTW/strings.xml
+++ b/plugins/aps/src/main/res/values-zh-rTW/strings.xml
@@ -14,9 +14,9 @@
     <string name="openaps_auto_isf">自動ISF</string>
     <string name="smb_interval_summary">SMB給定的頻率（以分鐘為單位）</string>
     <string name="resistance_lowers_target_title">阻力降低目標</string>
-    <string name="resistance_lowers_target_summary">當檢測到阻力時，降低目標血糖</string>
-    <string name="sensitivity_raises_target_title">靈敏度提高目標</string>
-    <string name="sensitivity_raises_target_summary">當檢測到靈敏度時，提高目標血糖</string>
+    <string name="resistance_lowers_target_summary">當偵測到阻力時，降低目標血糖</string>
+    <string name="sensitivity_raises_target_title">敏感度提高目標</string>
+    <string name="sensitivity_raises_target_summary">當偵測到靈敏度時，提高目標血糖</string>
     <string name="openapsma_disabled">外掛已停用</string>
     <string name="openapsma_no_glucose_data">無血糖資料可用</string>
     <string name="openaps_no_as_data">無自動靈敏度資料可用</string>
@@ -35,7 +35,7 @@
     <string name="openapsma_last_run_label">最後執行</string>
     <string name="openapsma_input_parameters_label">輸入參數</string>
     <string name="openapsma_glucose_status_label">血糖狀態</string>
-    <string name="openapsma_current_temp_label">當前溫度</string>
+    <string name="openapsma_current_temp_label">目前溫度</string>
     <string name="openapsma_iob_data_label">IOB資料</string>
     <string name="openapsma_profile_label">檔案</string>
     <string name="openapsma_meal_data_label">餐飲資料</string>
@@ -51,16 +51,16 @@
     <string name="openapsama_autosens_adjust_targets_summary">預設值：true\n這用於允許自動靈敏度調整血糖目標，除了ISF和基礎率之外。</string>
     <string name="openapsama_autosens_adjust_targets">自動靈敏度也調整目標</string>
     <string name="openapsama_min_5m_carb_impact_summary">預設值：3.0（AMA）或8.0（SMB）。這是一個預設每5分鐘碳水化合物吸收影響的設置。預設值是每5分鐘3mg/dl。這會影響碳水化合物的衰減速度，以及在血糖下降超過預期或上升不如預期時，計算未來預測血糖的碳水化合物吸收量。</string>
-    <string name="openapsama_max_daily_safety_multiplier_summary">預設值：3 這是一個關鍵的OpenAPS安全上限。這會將您的基礎率限制為您最大基礎率的3倍（在這個情況中）。您可能不需要更改此值，但您應該了解所討論的“3倍最大日基礎率；4倍當前基礎率”的安全上限。</string>
-    <string name="openapsama_current_basal_safety_multiplier_summary">預設值：4 這是關鍵OpenAPS安全上限的另一半，“3倍最大日基礎率；4倍當前基礎率”的另一半。這意味著無論您的幫浦設置的最大基礎率是多少，您的基礎率都不能高於此數字的當前基礎率的4倍。這是為了防止在理解算法如何工作之前設置過高的最大基礎率而進入危險區域。預設值是4倍；大多數人不需要調整此值，反而更可能需要調整其他設置，如果他們覺得“達到”這個安全上限。</string>
+    <string name="openapsama_max_daily_safety_multiplier_summary">預設值：3 這是一個關鍵的OpenAPS安全上限。這會將您的基礎率限制為您最大基礎率的3倍（在這個情況中）。您可能不需要更改此值，但您應該了解所討論的“3倍最大日基礎率；4倍目前基礎率”的安全上限。</string>
+    <string name="openapsama_current_basal_safety_multiplier_summary">預設值：4 這是關鍵OpenAPS安全上限的另一半，“3倍最大日基礎率；4倍目前基礎率”的另一半。這意味著無論您的幫浦設置的最大基礎率是多少，您的基礎率都不能高於此數字的目前基礎率的4倍。這是為了防止在理解算法如何工作之前設置過高的最大基礎率而進入危險區域。預設值是4倍；大多數人不需要調整此值，反而更可能需要調整其他設置，如果他們覺得“達到”這個安全上限。</string>
     <string name="openapsama_bolus_snooze_dia_divisor_summary">預設值：2\n在您進行餐前注射後，將會延後注射，因此當您剛吃完飯時，循環不會使用低臨時。這裡的示例和預設值為2；因此3小時的DIA意味著延後注射會逐漸在1.5小時內（3DIA/2）結束。</string>
     <string name="openapsama_link_to_preference_json_doc_txt">注意！\n通常您不需要更改以下值。請點擊這裡並閱讀文本，確保您在更改這些值之前理解它。</string>
     <string name="always_use_short_avg">始終使用短平均增量而不是簡單增量</string>
     <string name="always_use_short_avg_summary">當來自未過濾來源（如xDrip+）的資料發生干擾時有用。</string>
     <string name="openapsama_max_daily_safety_multiplier">最大日安全乘數</string>
-    <string name="openapsama_current_basal_safety_multiplier">當前基礎率安全乘數</string>
+    <string name="openapsama_current_basal_safety_multiplier">目前基礎率安全乘數</string>
     <string name="openapssmb_max_iob_title">OpenAPS不能超過的最大IOB總量 [U]</string>
-    <string name="openapssmb_max_iob_summary">在OpenAPS上下文中，這個值稱為最大IOB\n如果當前IOB大於此值，OpenAPS將不會增加更多胰島素</string>
+    <string name="openapssmb_max_iob_summary">在OpenAPS上下文中，這個值稱為最大IOB\n如果目前IOB大於此值，OpenAPS將不會增加更多胰島素</string>
     <string name="enable_uam">啟用UAM</string>
     <string name="enable_smb">啟用SMB</string>
     <string name="enable_smb_summary">使用超微量注射(SMB) 來取代臨時基礎率，以便加快作用速度</string>
@@ -168,7 +168,7 @@
     <string name="pump_disconnected">幫浦已中斷連線</string>
     <!--    autoISF -->
     <string name="half_basal_exercise_target_title">半基礎運動目標</string>
-    <string name="half_basal_exercise_target_summary" formatted="false">設定為一個數字，例如 160，這表示當臨時目標為 160 mg/dL 且高臨時目標提高敏感性=true時，在此水平運行 50% 的基礎率（120 = 75%；140 = 60%）。</string>
+    <string name="half_basal_exercise_target_summary">設定為一個數字，例如 160，這表示當臨時目標為 160 mg/dL 且高臨時目標提高敏感性=true時，在此水平運行 50% 的基礎率（120 = 75%；140 = 60%）。</string>
     <string name="autoISF_settings_title">自動ISF設定</string>
     <string name="autoISF_settings_summary">AutoISF 允許在各種葡萄糖行為情境中調整胰島素敏感性因子 (ISF)\n\n它還可以調整SMB輸送設定</string>
     <string name="acce_ISF_settings_title">acce_ISF設定</string>
@@ -177,7 +177,6 @@
     <string name="enableautoISFwithcob_summary">當有碳水化合物影響 (COB) 啟動時啟用 dura_ISF</string>
     <string name="bg_ISF_settings_title">bg_ISF設定</string>
     <string name="bg_ISF_settings_summary">bg_ISF 設定：根據預定義的多邊形，根據血糖水平調整 ISF</string>
-    <string name="enable_postprandial_ISF_always_summary">無論上一餐何時進食，始終啟用餐後 ISF 調整。</string>
     <string name="pp_ISF_settings_title">pp_ISF設定</string>
     <string name="pp_ISF_settings_summary">pp_ISF 設定：用於餐後血糖升高的 ISF</string>
     <string name="dura_ISF_settings_title">dura_ISF設定</string>
@@ -189,14 +188,14 @@
     <string name="use_autoISF_extensions_title">啟用 AutoISF 擴展功能</string>
     <string name="use_autoISF_extensions_summary">這些包括最近的血糖行為所導致的ISF調整，替代的SMB啟用程式以及對完全閉環的支援</string>
     <string name="openapsama_enable_autoISF">啟用根據血糖變化進行的 ISF 調整</string>
-    <string name="openapsama_autoISF_max_summary">預設值：1.0\n這是 autoISF 的倍數上限，用來限制 autoISF 比例的最高值，這也會決定它能將 ISF 調整到多低。\n\n警告：使用超過 2.5 的數值時，請格外小心</string>
-    <string name="openapsama_autoISF_min_summary">預設值：1.0\n這是 autoISF 的倍數上限，用來限制 autoISF 比例的最低值，這也會決定它能將 ISF 調整到多高。</string>
-    <string name="openapsama_dura_ISF_weight_summary" formatted="false">預設值：0.0\n這是 autoISF 每小時增長的速率，假設血糖是目標值的兩倍。當設置為 1.0 時，血糖在目標值的兩倍持續1小時後，ISF 將減少至 50%。\n\n當設置為 0.0 時，autoISF 的效果實際上是停用的。</string>
-    <string name="openapsama_lower_ISFrange_weight_summary">預設值：0.0\n這是應用於多邊形的權重，用來在血糖低於目標時調整 ISF。\n\n當設置為 0.0 時，該效果實際上是停用的。</string>
-    <string name="openapsama_higher_ISFrange_weight_summary">預設值：0.0\n這是應用於多邊形的權重，用來在血糖高於目標時調整 ISF。\n\n當設置為 0.0 時，該效果實際上是停用的。</string>
-    <string name="openapsama_pp_ISF_weight_summary">預設值：0.0\n這是應用於葡萄糖上升時的線性斜率的權重，用來調整 ISF。\n\n當設置為 0.0 時，這部分貢獻實際上是停用的。\"</string>
-    <string name="openapsama_bgAccel_ISF_weight_summary">預設值：0.0\n這是應用於葡萄糖加速時的權重，用來加強 ISF。\n\n當設置為 0.0 時，這部分貢獻實際上是停用的。</string>
-    <string name="openapsama_bgBrake_ISF_weight_summary">預設值：0.0\n這是應用於葡萄糖減速時的權重，用來削弱 ISF。\n\n當設置為 0.0 時，這部分貢獻實際上是停用的。</string>
+    <string name="openapsama_autoISF_max_summary">類似於 autosens_max，這個設定定義了 ISF（胰島素敏感因子）的強度。\n\n預設值 1.0 實際上會關閉這個效果。\n\n警告：使用超過 2.5 的數值時務必非常謹慎。</string>
+    <string name="openapsama_autoISF_min_summary">類似於 autosens_min，這個設定定義了 ISF（胰島素敏感因子）的最弱程度。\n\n預設值 1.0 實際上會關閉這個效果。</string>
+    <string name="openapsama_dura_ISF_weight_summary">這是針對長時間高血糖平台期間所應用的權重，並加強 ISF（胰島素敏感因子），因此可能增加胰島素的釋放量。\n\n預設值 0.0 實際上會關閉這個效果。</string>
+    <string name="openapsama_lower_ISFrange_weight_summary">這是當血糖低於目標時所應用的權重，會削弱 ISF（胰島素敏感因子），因此可能減少胰島素的釋放量。\n\n預設值 0.0 實際上會關閉這個效果。</string>
+    <string name="openapsama_higher_ISFrange_weight_summary">這是當血糖高於目標時所應用的權重，會加強 ISF（胰島素敏感因子），因此可能增加胰島素的釋放量。\n\n預設值 0.0 實際上會關閉這個效果。</string>
+    <string name="openapsama_pp_ISF_weight_summary">這是當血糖上升時所應用的權重，會加強 ISF（胰島素敏感因子），因此可能增加胰島素的釋放量。\n\n預設值 0.0 實際上會關閉這個效果。</string>
+    <string name="openapsama_bgAccel_ISF_weight_summary">這是當血糖加速上升時所應用的權重，會加強 ISF（胰島素敏感因子），因此可能增加胰島素的釋放量。\n\n預設值 0.0 實際上會關閉這個效果。</string>
+    <string name="openapsama_bgBrake_ISF_weight_summary">這是當血糖減速時所應用的權重，會削弱 ISF（胰島素敏感因子），因此可能減少胰島素的釋放量。\n\n預設值 0.0 實際上會關閉這個效果。</string>
     <string name="openapsama_autoISF_max">最大自動ISF比率\n(autoISF_max)</string>
     <string name="openapsama_autoISF_min">最小自動ISF比率\n(autoISF_min)</string>
     <string name="openapsama_lower_ISFrange_weight">較低的 ISF 範圍權重\n(lower_ISFrange_weight)</string>
@@ -217,6 +216,6 @@
     <string name="openapsama_smb_max_range_extension_summary">預設值：1 這是另一個重要的 OpenAPS 安全上限，指定了可以超過正常 120 maxSMB/maxUAM 分鐘的倍數。請慢慢地且謹慎地增加這個實驗值。</string>
     <string name="enableSMB_EvenOn_OddOff_always">啟用根據活動目標是偶數的情況下啟用SMB的替代啟動</string>
     <string name="enableSMB_EvenOn_OddOff_always_summary">\n啟用 ...\n如果活動目標 (mmol/L) 是偶數小數\n或活動目標 (mg/dL) 是偶數\n\n否則停用</string>
-    <string name="openapsama_iob_threshold_percent_summary" formatted="false">預設值：100%\n設置為 100% 時，此功能實際上是被停用的。</string>
-    <string name="openapsama_iob_threshold_percent">當超過最大活性胰島素百分比時，超微量注射將被停用\n（iob_threshold_percent）</string>
+    <string name="openapsama_iob_threshold_percent_summary" formatted="false">當 maxIOB 的百分比超過此數值時，SMBs（小量胰島素注射）將被停用。\n預設值：100%\n設定為 100% 時，這個功能實際上會被關閉。</string>
+    <string name="openapsama_iob_threshold_percent">SMB 的 maxIOB 門檻值百分比設定\n(iob_threshold_percent)</string>
 </resources>
