--- a/plugins/automation/src/main/res/values/strings.xml
+++ b/plugins/automation/src/main/res/values/strings.xml
@@ -92,7 +92,9 @@
     <string name="triggerSensorAgeLabel">Sensor age</string>
     <string name="triggerSensorAgeDesc">Sensor age %1$s %2$.1f hour</string>
     <string name="triggerCannulaAgeLabel">Cannula age</string>
-    <string name="triggerCannulaAgeDesc">Cannula age %1$s %2$.1f hour</string>    
+    <string name="triggerCannulaAgeDesc">Cannula age %1$s %2$.1f hour</string>
+    <string name="triggerPodChangeLabel">Pod activation</string>
+    <string name="triggerPodChangeDesc">Pod activated</string>
     <string name="triggerInsulinAgeLabel">Insulin age</string>
     <string name="triggerInsulinAgeDesc">Insulin age %1$s %2$.1f hour</string>
     <string name="triggerPumpBatteryAgeLabel">Pump battery age</string>
