- improve sms option placement in menu - fix this option to work only on aapsclient, only when it's enabledd

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,10 @@
     <string name="authorizationfailed">Authorization failed</string>
     <string name="cannula">Cannula</string>
     <string name="identification_not_set">Identification not set in dev mode</string>
+    <string name="a11y_dialog">dialog</string>
+    <!-- AAPS client sms -->
+    <string name="sms_receiver_number_dialog">If number is provided, insulin and calculator buttons will be able to send SMS command to inject bolus. Note that you still need to confirm it and reply with security token/code. Note that you need to enabled SMS control of AAPS phone to use this function.</string>
+    <string name="client_allow_sms">Allow AAPS client to send SMS with bolus command</string>
     <!-- WEAR OS-->
     <string name="remove_selected_items">Remove selected items</string>
     <string name="count_selected">%1$d selected</string>
